--- a/mods/diddy/web/index.html
+++ b/mods/diddy/web/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Responsive Game Interface</title>
+    <title>Diddy Application</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="/saito/css-imports/saito-header.css">
     <link rel="stylesheet" href="/saito/lib/font-awesome-6/css/fontawesome.min.css" type="text/css" media="screen">
