--- a/mods/website/web/new.html
+++ b/mods/website/web/new.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Saito - New</title>
-    <link rel="stylesheet" href="css/website-new.css">
+    <link rel="stylesheet" href="style-new.css">
 </head>
 
 <body>
