fixed general display issues

--- a/mods/website/web/new.html
+++ b/mods/website/web/new.html
@@ -50,10 +50,21 @@
 
         <!-- Mobile Menu -->
         <div class="mobile-menu">
-            <div class="hamburger" aria-label="Menu">
-                <span></span>
-                <span></span>
-                <span></span>
+            <div class="mobile-header">
+                <div class="header-logo">
+                    <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 381 134">
+                        <defs>
+                            <style>.cls-1{fill:#fff;}</style>
+                        </defs>
+                        <title>Saito Horizontal Secondary Logo White RGB</title>
+                        <path class="cls-1" d="M113.49,34.26,59,2.77h0a1.56,1.56,0,0,0-.39-.15h-.07a1.47,1.47,0,0,0-.82.11l-.07,0-.06,0L3.11,34.18h0L3,34.26a1.43,1.43,0,0,0-.72,1.24v63A1.42,1.42,0,0,0,3,99.73l54.54,31.49a1.45,1.45,0,0,0,.72.2,1.42,1.42,0,0,0,.72-.2l54.54-31.49a1.41,1.41,0,0,0,.69-1c0-.05,0-.1,0-.15s0-.08,0-.12v-63A1.43,1.43,0,0,0,113.49,34.26ZM56.8,127.5,5.59,97.93,31.67,53.24,56.8,67.82V127.5ZM5.12,37.83l24.07,14L5.12,93.05Zm54.55,30L61.14,67,86.72,52.2,111.34,38V97l-51.67,0ZM86.52,49,65.58,13.62,62.25,8,109.91,35.5ZM57.72,6,84,50.44l-15.56,9L58.23,65.34,6.69,35.43Zm2,94,47.82,0L59.67,127.5Z"/>
+                </svg>
+                </div>
+                <div class="hamburger">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
             </div>
             <div class="mobile-menu-content">
                 <div class="menu-section">
@@ -113,13 +124,9 @@
                     <a id="learn_more" href="https://wiki.saito.io/en/consensus" target="_blank">Learn More ↗</a>
                 </div>
             </div>
-
             <div class="animation-one-holder">
-
-                <a href="javascript:;" id="start_anim" class="va-btn various btn-white mb-hide play-animation-one">See Saito Consensus in Action ▶</a>
-                <a href="javascript:;" id="start_anim_mobile" class="va-btn various btn-white mb-show"> See Saito Consensus in Action ▶</a>
-
-
+                <a href="javascript:;" id="start_anim" class="va-btn various btn-white mb-hide play-animation-one">See Saito Consensus in Action&nbsp;&nbsp;▶</a>
+                <a href="javascript:;" id="start_anim_mobile" class="va-btn various btn-white mb-show"> See Saito Consensus in Action&nbsp;&nbsp;▶</a>
                 <svg id="top_animation" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
                     viewBox="0 0 1920 1080">
                     <defs>
@@ -247,7 +254,7 @@
                             </g>
                             <g fill="#fff">
                                 <path
-                                    d="M39.69 91.52h2.06l2.91 7.17 2.9-7.17h2.06v9.8H47.6v-5.67h-.08l-.17 1.19-1.79 4.48h-1.81l-1.79-4.48-.17-1.19h-.08v5.67h-2.02v-9.8ZM51.46 91.52h2.14v9.8h-2.14v-9.8ZM55.45 91.52h2.31l3.6 5.96.17.8h.1v-6.76h2.14v9.8h-2.31l-3.6-5.96-.17-.8h-.1v6.76h-2.14v-9.8ZM65.62 91.52h6.5v1.82h-4.35v2.17h3.98v1.82h-3.98v2.17h4.51v1.82h-6.65v-9.8ZM73.93 91.52h3.71c1.15 0 2.06.29 2.74.86a2.95 2.95 0 0 1 1.02 2.39c0 1.19-.54 2.1-1.61 2.76v.15l2.11 3.64h-2.35l-1.93-3.37h-1.55v3.37h-2.14v-9.8Zm3.75 4.61c.48 0 .86-.12 1.15-.36.29-.24.43-.58.43-1.03s-.14-.8-.43-1.04a1.75 1.75 0 0 0-1.16-.36h-1.61v2.79h1.61ZM84.54 101.07a3.52 3.52 0 0 1-1.37-1.09c-.34-.47-.55-1-.6-1.61l.11-.15 1.95-.29c.06.57.26 1.01.61 1.32.35.31.79.46 1.31.46.47 0 .84-.12 1.13-.36.29-.24.43-.58.43-1.02 0-.35-.1-.64-.29-.85s-.44-.37-.74-.48-.71-.23-1.23-.35a5.44 5.44 0 0 1-2.15-.95 2.09 2.09 0 0 1-.76-1.72c0-.52.14-.98.43-1.37.29-.39.68-.69 1.18-.9.5-.21 1.07-.31 1.71-.31 1.03 0 1.84.25 2.44.74s.96 1.14 1.08 1.95l-.11.15-1.81.2a1.72 1.72 0 0 0-.5-1.09 1.58 1.58 0 0 0-1.13-.39c-.37 0-.68.08-.91.25a.76.76 0 0 0-.35.65c0 .23.09.43.26.58s.41.28.7.38c.29.1.7.21 1.22.33.94.22 1.69.57 2.23 1.02s.82 1.13.82 2.03a3.11 3.11 0 0 1-1.86 2.9c-.57.26-1.22.39-1.92.39s-1.33-.13-1.9-.39Z" />
+                                    d="M39.69 91.52h2.06l2.91 7.17 2.9-7.17h2.06v9.8H47.6v-5.67h-.08l-.17 1.19-1.79 4.48h-1.81l-1.79-4.48-.17-1.19h-.08v5.67h-2.02v-9.8ZM51.46 91.52h2.14v9.8h-2.14v-9.8ZM55.45 91.52h2.31l3.6 5.96.17.8h.1v-6.76h2.14v9.8h-2.31l-3.6-5.96-.17-.8h-.1v6.76h-2.14v-9.8ZM65.62 91.52h6.5v1.82h-4.35v2.17h3.98v1.82h-3.98v2.17h4.51v1.82h-6.65v-9.8ZM73.93 91.52h3.71c1.15 0 2.06.29 2.74.86a2.95 2.95 0 0 1 1.02 2.39c0 1.19-.54 2.1-1.61 2.76v.15l2.11 3.64h-2.35l-1.93-3.37h-1.55v3.37h-2.14v-9.8Zm3.75 4.61c.48 0 .86-.12 1.15-.36.29-.24.43-.58.43-1.03s-.14-.8-.43-1.04a1.75 1.75 0 0 0-1.16-.36h-1.61v2.79h1.61ZM84.54 101.07a3.52 3.52 0 0 1-1.37-1.09c-.34-.47-.55-1-.6-1.61l.11-.15 1.95-.29c.06.57.26 1.01.61 1.32.35.31.79.46 1.31.46.47 0 .84-.12 1.13-.36.29-.24.43-.58.43-1.02 0-.35-.1-.64-.29-.85s-.44-.37-.74-.48-.71-.23-1.23-.35a5.44 5.44 0 0 1-2.15-.95 2.09 2.09 0 0 1-.76-1.72c0-.52.14-.98.43-1.37.29-.39.68-.69 1.18-.9.5-.21 1.07-.31 1.71-.31 1.03 0 1.84.25 2.44.74.6.49.96 1.14 1.08 1.95l-.11.15-1.81.2a1.72 1.72 0 0 0-.5-1.09 1.58 1.58 0 0 0-1.13-.39c-.37 0-.68.08-.91.25a.76.76 0 0 0-.35.65c0 .23.09.43.26.58s.41.28.7.38c.29.1.7.21 1.22.33.94.22 1.69.57 2.23 1.02s.82 1.13.82 2.03a3.11 3.11 0 0 1-1.86 2.9c-.57.26-1.22.39-1.92.39s-1.33-.13-1.9-.39Z" />
                             </g>
                         </g>
                         <g id="dots">
@@ -1151,7 +1158,8 @@
 
         <section id="web3">
             <div id="bottom_title" class="advan-title">
-                <h2 class="va-title">Saito makes real web3 possible. <br>No Strings attached.</h2>
+                <h2>Saito makes real web3 possible.</h2> 
+                <h2>No Strings attached.</h2>
                 <p>Unlike other blockchains, <br>Saito's economic incentives are <br>fundamentally aligned, <br>allowing for true and sustainable web3</p>
                 <a id="start_anim2" href="javascript:;" class="va-btn text-uppercase btn-white">See True web3 with Saito</a>
                 <a id="start_anim2_mobile" href="javascript:;" class="va-btn text-uppercase btn-white">See True web3 with Saito</a>
