--- a/mods/website/web/new.html
+++ b/mods/website/web/new.html
@@ -100,6 +100,7 @@
 
     <div class="container">
         <section id="landing">
+            <a name="landing"></a>
             <div class="landing-content">
                 <div class="cube-container">
                     <object class="saito-cube" data="/saito/img/saito-cube.svg" type="image/svg+xml"></object>
@@ -116,7 +117,7 @@
         </section-->
 
         <section id="consensus">
-
+            <a name="consensus"></a>
             <div class="animation-one-controls">
                 <div id="animation-ttl" class="info col-lg-7">
                     <h1 class="va-sub-title text-uppercase">SAITO CONSENSUS</h1>
@@ -344,9 +345,7 @@
                                     d="M24.7 198.79h2.31l3.6 5.96.17.8h.1v-6.76h2.14v9.8h-2.31l-3.6-5.96-.17-.8h-.1v6.76H24.7v-9.8Z" />
                                 <path d="M34.86 198.79h6.66v1.82H37v2.27h4.16v1.83H37v3.88h-2.14v-9.8Z" />
                                 <path
-                                    d="M43.01 198.79h3.71c1.15 0 2.06.29 2.74.86a2.95 2.95 0 0 1 1.02 2.39c0 1.19-.54 2.1-1.61 2.76v.15l2.11 3.64h-2.35l-1.93-3.37h-1.55v3.37h-2.14v-9.8Zm3.75 4.61c.48 0 .86-.12 1.15-.36.29-.24.43-.58.43-1.03s-.14-.8-.43-1.04-.67-.36-1.16-.36h-1.61v2.79h1.61Z" />
-                                <path
-                                    d="M55.37 198.79h1.93l3.74 9.8h-2.25l-.57-1.65h-3.75l-.59 1.65h-2.24l3.74-9.8Zm2.2 6.31-1.05-3-.15-1.06h-.07l-.14 1.06-1.05 3h2.46Z" />
+                                    d="M43.01 198.79h3.71c1.15 0 2.06.29 2.74.86a2.95 2.95 0 0 1 1.02 2.39c0 1.19-.54 2.1-1.61 2.76v.15l2.11 3.64h-2.35l-1.93-3.37h-1.55v3.37h-2.14v-9.8Zm3.75 4.61c.48 0 .86-.12 1.15-.36.29-.24.43-.58.43-1.03s-.14-.8-.43-1.04-.67-.36-1.16-.36h-1.61v2.79h1.61ZM55.37 198.79h1.93l3.74 9.8h-2.25l-.57-1.65h-3.75l-.59 1.65h-2.24l3.74-9.8Zm2.2 6.31-1.05-3-.15-1.06h-.07l-.14 1.06-1.05 3h2.46Z" />
                                 <path
                                     d="M63.47 208.33c-.56-.26-1.02-.62-1.37-1.09s-.55-1-.6-1.61l.11-.15 1.95-.29c.06.57.26 1.01.61 1.32.35.31.79.46 1.31.46.47 0 .84-.12 1.13-.36.29-.24.43-.58.43-1.02 0-.35-.1-.64-.29-.85-.19-.21-.44-.37-.74-.48s-.71-.23-1.23-.35a5.44 5.44 0 0 1-2.15-.95 2.09 2.09 0 0 1-.76-1.72c0-.52.14-.98.43-1.37.29-.39.68-.69 1.18-.9.5-.21 1.07-.31 1.71-.31 1.03 0 1.84.25 2.44.74.6.49.96 1.14 1.08 1.95l-.11.15-1.81.2a1.67 1.67 0 0 0-.5-1.09 1.58 1.58 0 0 0-1.13-.39c-.37 0-.68.08-.91.25a.76.76 0 0 0-.35.65c0 .23.09.43.26.58.17.15.41.28.7.38.29.1.7.21 1.22.33.94.22 1.69.57 2.23 1.02.55.46.82 1.13.82 2.03a3.11 3.11 0 0 1-1.86 2.9c-.57.26-1.22.39-1.93.39s-1.33-.13-1.9-.39Z" />
                                 <path d="M71.89 200.6h-2.46v-1.82h7.07v1.82h-2.46v7.98H71.9v-7.98Z" />
@@ -1138,6 +1137,7 @@
         </section>
 
         <section id="community">
+            <a name="community"></a>
             <h1>Saito Community</h1>
             <div class="community-content">
                 <div class="community-image">
@@ -1157,6 +1157,7 @@
         </section>
 
         <section id="web3">
+            <a name="web3"></a>
             <div id="bottom_title" class="advan-title">
                 <h2>Saito makes real web3 possible.</h2> 
                 <h2>No Strings attached.</h2>
@@ -1195,6 +1196,7 @@
 
 
         <section id="contact">
+            <a name="contact"></a>
             <div class="contact-container">
                 <div class="contact-column">
                     <object class="contact-cube" data="/saito/img/saito-cube.svg" type="image/svg+xml"></object>
