new splash: reduce overlap at various dimensions

--- a/mods/website/web/new.html
+++ b/mods/website/web/new.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Saito - New</title>
     <link rel="stylesheet" href="style-new.css">
+    <!--link rel="stylesheet" href="/saito/lib/font-awesome-6/css/fontawesome.min.css" type="text/css" media="screen" />
+    <link rel="stylesheet" href="/saito/lib/font-awesome-6/css/all.css" type="text/css" media="screen" /-->
+
 </head>
 
 <body>
@@ -30,10 +33,10 @@
             <div class="menu-container">
                 <div class="menu-section">
                     <div class="menu-links">
-                        <a href="/redsquare" class="menu-button">Red Square - Social</a>
-                        <a href="/arcade" class="menu-button">Arcade - Games</a>
-                        <a href="/chat" class="menu-button">Chat - Messaging</a>
-                        <a href="/videocall" class="menu-button">Video Call</a>
+                        <a href="/redsquare" class="menu-button">Social  <i class='fa-solid fa-square'></i></a>
+                        <a href="/arcade" class="menu-button">Gaming  <i class='fas fa-gamepad'></i></a>
+                        <a href="/chat" class="menu-button">Messaging  <i class='fas fa-comments'></i></a>
+                        <a href="/videocall" class="menu-button">Calling  <i class='fa-solid fa-mobile-screen-button'></i></a>
                     </div>
                 </div>
                 <div class="menu-section">
