new splash: text spacing

--- a/mods/website/web/new.html
+++ b/mods/website/web/new.html
@@ -1117,8 +1117,8 @@
                 </div>
                 <div class="community-divider"></div>
                 <div class="community-text">
-                    <p>The Saito Community lives on <a href="/redsquare">RedSquare</a>.<br>
-                    Head over to ask a question, chat with devs or just post a meme.</p>
+                    <p>The Saito Community lives on <a href="/redsquare">RedSquare</a>.
+                    It's the best place to ask a question, chat with devs or just post a meme.</p>
 
                     <p>If you want to dig into the economic design, tech or anything else, you want the <a href="https://wiki.saito.com">Saito Wiki</a>.</p>
 
@@ -1131,8 +1131,7 @@
         <section id="web3">
             <a name="web3"></a>
             <div id="bottom_title" class="advan-title">
-                <h2>Saito makes real web3 possible.</h2> 
-                <h2>No Strings attached.</h2>
+                <h2>Saito makes real web3 possible &mdash; no strings attached</h2> 
                 <p>Unlike other blockchains, Saito's economic incentives are fundamentally aligned, allowing for true and sustainable web3</p>
                 <a id="start_anim2" href="javascript:;" class="va-btn text-uppercase btn-white">See True web3 with Saito&nbsp;&nbsp;▶</a>
                 <a id="start_anim2_mobile" href="javascript:;" class="va-btn text-uppercase btn-white">See True web3 with Saito&nbsp;&nbsp;▶</a>
