splash page updates

--- a/mods/website/web/new.html
+++ b/mods/website/web/new.html
@@ -1120,7 +1120,7 @@
                     <p>The Saito Community lives on <a href="/redsquare">RedSquare</a>.
                     It's the best place to ask a question, chat with devs or just post a meme.</p>
 
-                    <p>If you want to dig into the economic design, tech or anything else, you want the <a href="https://wiki.saito.com">Saito Wiki</a>.</p>
+                    <p>If you want to dig into the economic design, tech or anything else, see the <a href="https://wiki.saito.com">Saito Wiki</a>.</p>
 
                     <p>For quick answers check out the <a href="https://saitofaqs.com/">Saito Community FAQs</a></p>
                 </div>
