improve splash page bottom animation layout

--- a/mods/website/web/index.html
+++ b/mods/website/web/index.html
@@ -1168,8 +1168,8 @@
             <div id="bottom_title" class="advan-title">
                 <h2>Saito makes real web3 possible &mdash; no strings attached</h2> 
                 <p>Unlike other blockchains, Saito's economic incentives are fundamentally aligned, allowing for true and sustainable web3</p>
-                <a id="start_anim2" href="javascript:;" class="va-btn text-uppercase btn-white">See True web3 with Saito&nbsp;&nbsp;▶</a>
-                <a id="start_anim2_mobile" href="javascript:;" class="va-btn text-uppercase btn-white">See True web3 with Saito&nbsp;&nbsp;▶</a>
+                <a id="start_anim2" href="javascript:;" class="va-btn text-uppercase btn-white">see true web3 with Saito&nbsp;&nbsp;▶</a>
+                <a id="start_anim2_mobile" href="javascript:;" class="va-btn text-uppercase btn-white">see true web3 with Saito&nbsp;&nbsp;▶</a>
             </div>
             <div id="bottom-animation" class="section-bg">
                 <a id="close_anim2" href="javascript:;">
