fix saito.io og image links

--- a/mods/website/web/index.html
+++ b/mods/website/web/index.html
@@ -15,23 +15,23 @@
     <meta name="twitter:title" content="Saito - True Web 3">
     <meta name="twitter:url" content="https://saito.tech/">
     <meta name="twitter:description" content="Easy to Use, Peer-to-Peer Internet">
-    <meta name="twitter:image" content="https://saito.io/saito/img/saito_card_horizontal.png">
+    <meta name="twitter:image" content="https://saito.io/saito/img/saito-og.png">
 
     <meta property="og:title" content="🟥 Saito">
     <meta property="og:url" content="https://saito.io/redsquare">
     <meta property="og:type" content="website">
     <meta property="og:description" content="Easy to Use, Peer-to-Peer Internet">
     <meta property="og:site_name" content="🟥 Saito">
-    <meta property="og:image" content="https://saito.io/saito/img/saito_card_horizontal.png">
-    <meta property="og:image:url" content="https://saito.io/saito/img/saito_card_horizontal.png">
-    <meta property="og:image:secure_url" content="https://saito.io/saito/img/saito_card_horizontal.png">
+    <meta property="og:image" content="https://saito.io/saito/img/saito-og.png">
+    <meta property="og:image:url" content="https://saito.io/saito/img/saito-og.png">
+    <meta property="og:image:secure_url" content="https://saito.io/saito/img/saito-og.png">
 
 
     <script type="application/ld+json">
         {
         "@context": "https://schema.org",
           "@type": "Organization",
-        "image": "https://saito.io/saito/img/saito_card_horizontal.png",
+        "image": "https://saito.io/saito/img/saito-og.png",
           "url": "https://saito.io/",
         "sameAs": ["https://saito.tech/", "https://wiki.saito.io/", "https://saito.io/redsquare/"],
           "logo": "https://wiki.saito.io/saito-logo.png",
