--- a/mods/website/web/index.html
+++ b/mods/website/web/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Saito - New</title>
+    <title>Saito</title>
     <link rel="stylesheet" href="style.css">
 
     <meta name="author" content="The Saito Team">
