--- a/mods/website/web/index.html
+++ b/mods/website/web/index.html
@@ -163,12 +163,12 @@
             <div class="animation-one-holder">
                 <div class="animation-one-title">
                     <h1>SAITO CONSENSUS</h1>
-                 <div id="animation-ttl">
+                    <div id="animation-ttl">
                     <h3>Evolution beyond Proof of Work and Proof of Stake</h3>
                     <p>
                         <a id="learn_more" href="https://wiki.saito.io/en/consensus" target="_blank">Learn More ↗</a>
                     </p>
-                  </div>
+                </div>
                 <a href="javascript:;" id="start_anim" class="">See Saito Consensus in Action&nbsp;&nbsp;▶</a>
                 <a href="javascript:;" id="start_anim_mobile" class="va-btn various btn-white mb-show"> See Saito Consensus in Action&nbsp;&nbsp;▶</a>
                 </div>
@@ -1141,6 +1141,44 @@
                             d="M319 170.8a12.2 12.2 0 0 0-17.3 0l-56.8 56.8-56.8-56.8c-4.8-4.8-12.5-4.8-17.3 0s-4.8 12.5 0 17.3l56.8 56.8-56.8 56.8a12.2 12.2 0 0 0 0 17.3c2.4 2.4 5.5 3.6 8.7 3.6s6.3-1.2 8.7-3.6l56.8-56.8 56.8 56.8c2.4 2.4 5.5 3.6 8.7 3.6s6.3-1.2 8.7-3.6a12.2 12.2 0 0 0 0-17.3l-57-56.8 56.8-56.8a12.2 12.2 0 0 0 0-17.3z" />
                     </svg>
                 </a>
+            </div>
+        </section>
+
+        <section id="multiwallet">
+            <a name="multiwallet"></a>
+            <div class="multiwallet-content">
+                <div class="multiwallet-text">
+                    <h1>Saito Multiwallet</h1>
+                    <p>Saito multiwallet lets you send and receive SAITO and third party crypto including BTC, ETH and EGLD and supports their use in all Saito Applications.</p>
+                </div>
+                <div class="multiwallet-logos">
+                    <div class="logo-container">
+                        <div class="logo-circle">
+                            <div class="logo-disk">
+                                <object data="../img/saito.svg" type="image/svg+xml"></object>
+                            </div>
+                            <span>Saito</span>
+                        </div>
+                        <div class="logo-circle">
+                            <div class="logo-disk">
+                                <object data="../img/btc.svg" type="image/svg+xml"></object>
+                            </div>
+                            <span>Bitcoin</span>
+                        </div>
+                        <div class="logo-circle">
+                            <div class="logo-disk">
+                                <object data="../img/eth.svg" type="image/svg+xml"></object>
+                            </div>
+                            <span>Ethereum</span>
+                        </div>
+                        <div class="logo-circle">
+                            <div class="logo-disk">
+                                <object data="../img/mvx.svg" type="image/svg+xml"></object>
+                            </div>
+                            <span>MultiverseX</span>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
 
