minor fix to site css

--- a/mods/website/web/index.html
+++ b/mods/website/web/index.html
@@ -128,6 +128,7 @@
         <a href="#landing" class="active"></a>
         <!--a href="#about"></a-->
         <a href="#consensus"></a>
+        <a href="#wallet"></a>
         <a href="#community"></a>
         <a href="#web3"></a>
         <a href="#contact"></a>
