--- a/mods/website/web/index.html
+++ b/mods/website/web/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Saito</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/saito/saito.css">
+
 
     <meta name="author" content="The Saito Team">
 
