added links to website contact section

--- a/mods/website/web/index.html
+++ b/mods/website/web/index.html
@@ -136,6 +136,11 @@
                     <!--a href="https://twitter.com/SaitoOfficial">Twitter</a-->
                     <!--a href="https://discord.gg/HjTFh9Tfec">Discord</a-->
                 </div>
+                <div class="menu-section">
+                    <h3>Media</h3>
+                    <a href="/saito/assets/Saito-Brand-Book.pdf">Brand Book</a>
+                    <a href="/saito/assets/logos">Logos and Assets</a>
+                </div>
             </div>
         </div>
     </header>
@@ -459,7 +464,7 @@
                                     d="M63.47 208.33c-.56-.26-1.02-.62-1.37-1.09s-.55-1-.6-1.61l.11-.15 1.95-.29c.06.57.26 1.01.61 1.32.35.31.79.46 1.31.46.47 0 .84-.12 1.13-.36.29-.24.43-.58.43-1.02 0-.35-.1-.64-.29-.85-.19-.21-.44-.37-.74-.48s-.71-.23-1.23-.35a5.44 5.44 0 0 1-2.15-.95 2.09 2.09 0 0 1-.76-1.72c0-.52.14-.98.43-1.37.29-.39.68-.69 1.18-.9.5-.21 1.07-.31 1.71-.31 1.03 0 1.84.25 2.44.74.6.49.96 1.14 1.08 1.95l-.11.15-1.81.2a1.67 1.67 0 0 0-.5-1.09 1.58 1.58 0 0 0-1.13-.39c-.37 0-.68.08-.91.25a.76.76 0 0 0-.35.65c0 .23.09.43.26.58.17.15.41.28.7.38.29.1.7.21 1.22.33.94.22 1.69.57 2.23 1.02.55.46.82 1.13.82 2.03a3.11 3.11 0 0 1-1.86 2.9c-.57.26-1.22.39-1.93.39s-1.33-.13-1.9-.39Z" />
                                 <path d="M71.89 200.6h-2.46v-1.82h7.07v1.82h-2.46v7.98H71.9v-7.98Z" />
                                 <path
-                                    d="M77.87 198.79h3.71c1.15 0 2.06.29 2.74.86a2.95 2.95 0 0 1 1.02 2.39c0 1.19-.54 2.1-1.61 2.76v.15l2.11 3.64h-2.35l-1.93-3.37h-1.55v3.37h-2.14v-9.8Zm3.75 4.61c.48 0 .86-.12 1.15-.36.29-.24.43-.58.43-1.03s-.14-.8-.43-1.04-.67-.36-1.16-.36H80v2.79h1.61Z" />
+                                    d="M77.87 198.79h3.71c1.15 0 2.06.29 2.74.86a2.95 2.95 0 0 1 1.02 2.39c0 1.19-.54 2.1-1.61 2.76v.15l2.11 3.64h-2.35l-1.93-3.37h-1.55v3.37h-2.14v-9.8Zm3.75 4.61c.48 0 .86-.12 1.15-.36.29-.24.43-.58.43-1.03s-.14-.8-.43-1.04-.67-.36-1.16-.36h-1.61v2.79h1.61Z" />
                                 <path
                                     d="M88.93 208.23a3.36 3.36 0 0 1-1.38-1.39 4.36 4.36 0 0 1-.48-2.09v-5.96h2.14v5.95c0 .68.16 1.2.48 1.55s.78.53 1.39.53 1.07-.18 1.38-.53c.32-.35.48-.87.48-1.55v-5.95h2.14v5.96c0 .79-.16 1.49-.48 2.09-.32.6-.78 1.06-1.38 1.39-.6.33-1.32.5-2.15.5s-1.55-.17-2.15-.5Z" />
                                 <path
@@ -1313,19 +1318,19 @@
                     <div class="contact-links">
                         <div>
                             <h2>Email</h2>
-                            <p>
                                 <a href="mailto:info@saito.tech">info@saito.tech</a>
-                            </p>
                         </div>
                         <div>
                             <h2>Social</h2>
-                            <p>
-                                <a href="/redsquare">RedSquare</a>
-                            </p>
-                            <p>
+                                <a href="/redsquare">RedSquare</a><br
                                 <a href="/chat">Saito Chat</a>
-                            </p>
                         </div>
+                        <div>
+                            <h2>Media</h2>
+                                <a href="/saito/assets/Saito-Brand-Book.pdf">Brand Book</a><br>
+                                <a href="/saito/assets/logos">Logos and Assets</a>
+                        </div>
+        
                     </div>
                 </div>
 
