--- a/mods/paths/web/index.html
+++ b/mods/paths/web/index.html
@@ -56,7 +56,7 @@
 			<div class="space london" id="london"></div>
 			<div class="space calais" id="calais"></div>
 			<div class="space amiens" id="amiens"></div>
-			<div class="space cambral" id="cambral"></div>
+			<div class="space cambrai" id="cambrai"></div>
 			<div class="space sedan" id="sedan"></div>
 			<div class="space verdun" id="verdun"></div>
 			<div class="space chateauthierry" id="chateauthierry"></div>
@@ -78,7 +78,8 @@
 			<div class="space poitiers" id="poitiers"></div>
 			<div class="space stamand" id="stamand"></div>
 			<div class="space nevers" id="nevers"></div>
-			<div class="space lyron" id="lyon"></div>
+			<div class="space lyon" id="lyon"></div>
+			<div class="space dijon" id="dijon"></div>
 			<div class="space avignon" id="avignon"></div>
 			<div class="space marseilles" id="marseilles"></div>
 			<div class="space nice" id="nice"></div>
@@ -116,7 +117,7 @@
 			<div class="space rostock" id="rostock"></div>
 			<div class="space stettin" id="stettin"></div>
 			<div class="space cottbus" id="cottbus"></div>
-			<div class="space desden" id="dresden"></div>
+			<div class="space dresden" id="dresden"></div>
 			<div class="space breslau" id="breslau"></div>
 			<div class="space oppeln" id="oppeln"></div>
 			<div class="space posen" id="posen"></div>
@@ -228,9 +229,9 @@
 			<div class="space zhitomir" id="zhitomir"></div>
 			<div class="space kiev" id="kiev"></div>
 			<div class="space kharkov" id="kharkov"></div>
-			<div class="space kamenestspodolsky" id="kamenestspodolski"></div>
+			<div class="space kamenetspodolsky" id="kamenetspodolski"></div>
 			<div class="space vinnitsa" id="vinnitsa"></div>
-			<div class="space belayaterkov" id="belayatserkov"></div>
+			<div class="space belayatserkov" id="belayatserkov"></div>
 			<div class="space zhmerinka" id="zhmerinka"></div>
 			<div class="space uman" id="uman"></div>
 			<div class="space kishinev" id="kishinev"></div>
