fix typo in home page

--- a/mods/website/web/index.html
+++ b/mods/website/web/index.html
@@ -1241,7 +1241,7 @@
                             <div class="logo-disk">
                                 <object data="../img/mvx.svg" type="image/svg+xml"></object>
                             </div>
-                            <span>MultiverseX</span>
+                            <span>MultiversX</span>
                         </div>
                     </div>
                 </div>
