adding useful wallet state info to spammer ui

--- a/mods/spam/web/index.html
+++ b/mods/spam/web/index.html
@@ -59,6 +59,18 @@
 			<div>
 				<input type="number" name="spam-fee" id="spam-fee" value="0" min="0" step="1" />
 			</div>
+			<div>Block ID:</div>
+			<div>
+				<input type="text" name="spam-blockid" id="spam-blockid" value="" readonly />
+			</div>
+			<div>Balance:</div>
+			<div>
+				<input type="text" name="spam-balance" id="spam-balance" value="" readonly />
+			</div>
+			<div>Slip Count:</div>
+			<div>
+				<input type="text" name="spam-slipcount" id="spam-slipcount" value="" readonly />
+			</div>
 		</div>
 		<div class="spam-buttons">
 			<button class="start" class="saito-button-primary">
