added address info to spammer

--- a/mods/spam/web/index.html
+++ b/mods/spam/web/index.html
@@ -63,6 +63,10 @@
 			<div>
 				<input type="text" name="spam-blockid" id="spam-blockid" value="" readonly />
 			</div>
+			<div>Address:</div>
+			<div>
+				<input type="text" name="spam-address" id="spam-address" value="" readonly />
+			</div>
 			<div>Balance:</div>
 			<div>
 				<input type="text" name="spam-balance" id="spam-balance" value="" readonly />
